# plangen

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .ruff.toml  AGENTS.md  CLAUDE.md  CODE_CLEANUP_REPORT.md  CREATE_ISSUES_README.md  DOCUMENTATION_PROGRESS.md  DOCUMENTATION_STRUCTURE.md  IMPLEMENTATION_SUMMARY.md  ISSUES_TO_CREATE.md  PENDING_TASKS.md  PR_DESCRIPTION.md  PUBLISHING.md  README.md  TESTING.md  WORKFLOW_DIAGRAM.md  calendar_scheduling_bedrock_result.json  calendar_scheduling_bedrock_result.txt  calendar_scheduling_openai_result.json  codecov.yml  create_issues_from_tasks.py  lychee.toml  mkdocs.yml  pdf_reader.py  pyproject.toml  requirements.txt  setup.py  sitemap.xml  workspace_setup.py
.github/: PYPI_SETUP_CHECKLIST.md
.github/workflows/: ai-issue-triage.yml  dispatch-automations.yml  docs-deploy.yml  docs-validation.yml  links.yml  lint-markdown.yml  publish-package.yml  publish-pypi.yml  python-lint.yml  python-tests.yml
docs/: API_DESIGN_AND_ORCHESTRATION.md  RELEASING.md  index.md  streaming_guide.md
docs/algorithm_reference/: algorithm_selection_guide.md  best_of_n.md  index.md  mixture_of_algorithms.md  rebase.md  tree_of_thought.md
docs/api_reference/: agents.md  algorithm.md  index.md  models.md  plangen.md  prompts.md  verification.md  verifiers.md  visualization.md
docs/examples/: bedrock_example.md  best_of_n_example.md  custom_prompts_example.md  custom_verification.md  index.md  mixture_of_algorithms_example.md  openai_example.md  rebase_example.md  simple_example.md  tree_of_thought_example.md  visualization_example.md
docs/user_guide/: configuration.md  custom_prompts.md  index.md  installation.md  models.md  quickstart.md  verification.md  visualization.md
examples/: algorithms_example.py  api_usage_example.py  aws_bedrock_test.py  best_of_n_visualization_example.py  calendar_scheduling_bedrock.py  demo_best_of_n.py  demo_rebase.py  demo_verification.py  intent_test.py  mixture_of_algorithms_visualization_example.py  paper_replication.py  plan_visualization_example.py  plangen_bedrock_test.py  rebase_visualization_example.py  simple_example.py  simple_intent_test.py  simple_openai_test.py  streaming_example.py  test_best_of_n.py  test_rebase.py  test_tree_of_thought.py  test_verification.py  typed_api_example.py  verifiers_example.py
examples/calendar_domain/: README.md  __init__.py  calendar_verifier.py
plangen/: __init__.py  agents.py  agents_legacy.py  api.py  plangen.py  types.py
plangen/agents/: README.md  __init__.py  base_agent.py  constraint_agent.py  selection_agent.py  solution_agent.py  verification_agent.py
plangen/algorithms/: __init__.py  base_algorithm.py  best_of_n.py  mixture_of_algorithms.py  rebase.py  tree_of_thought.py
plangen/examples/: __init__.py  base_verifier.py
plangen/examples/calendar/: __init__.py  calendar_verifier.py
plangen/examples/utils/: __init__.py  time_slot_verifier.py
plangen/models/: __init__.py  base_model.py  bedrock_model.py  openai_model.py
plangen/prompts/: __init__.py  prompt_manager.py
plangen/utils/: __init__.py  llm_interface.py  template_loader.py  time_slot_verifier.py  ucb.py
plangen/verification/: __init__.py  base_verifier.py  verifier_factory.py
plangen/verification/strategies/: __init__.py  math_verifier.py
plangen/visualization/: README.md  __init__.py  graph_renderer.py  observers.py
scripts/: sync-lint-config.sh
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/API_DESIGN_AND_ORCHESTRATION/: index.html
site/DOCUMENTATION_PROGRESS/: index.html
site/DOCUMENTATION_STRUCTURE/: index.html
site/algorithm_reference/: index.html
site/algorithm_reference/algorithm_selection_guide/: index.html
site/algorithm_reference/best_of_n/: index.html
site/algorithm_reference/mixture_of_algorithms/: index.html
site/algorithm_reference/rebase/: index.html
site/algorithm_reference/tree_of_thought/: index.html
site/api_reference/: index.html
site/api_reference/algorithm/: index.html
site/api_reference/plangen/: index.html
site/api_reference/verifiers/: index.html
site/api_reference/visualization/: index.html
site/examples/: index.html
site/examples/bedrock_example/: index.html
site/examples/best_of_n_example/: index.html
site/examples/custom_prompts_example/: index.html
site/examples/custom_verification/: index.html
site/examples/mixture_of_algorithms_example/: index.html
site/examples/openai_example/: index.html
site/examples/rebase_example/: index.html
site/examples/simple_example/: index.html
site/examples/tree_of_thought_example/: index.html
site/examples/visualization_example/: index.html
site/search/: search_index.json
site/user_guide/: index.html
site/user_guide/configuration/: index.html
site/user_guide/custom_prompts/: index.html
site/user_guide/installation/: index.html
site/user_guide/models/: index.html
site/user_guide/quickstart/: index.html
site/user_guide/verification/: index.html
site/user_guide/visualization/: index.html
tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_constraint_agent.py  test_integration.py  test_integration_all_algorithms.py  test_mixture_of_algorithms.py  test_models.py  test_plangen.py  test_prompts.py  test_rebase.py  test_regression_issue_26.py  test_streaming.py  test_tree_of_thought.py  test_types.py  test_visualization.py  test_visualization_algorithms.py
