[tool.poetry]
name = "plangen"
version = "0.1.0"
description = "A multi-agent framework for generating planning and reasoning trajectories with LLMs"
authors = ["Carlos Cajias <cajias@example.com>"]
maintainers = ["PlanGEN Team <plangen@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/cajias/plangen"
documentation = "https://github.com/cajias/plangen/tree/main/docs"
homepage = "https://github.com/cajias/plangen"
keywords = ["llm", "planning", "agents", "multi-agent", "generative-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{include = "plangen"}]

# PyPI-specific fields
[tool.poetry.urls]
"Bug Tracker" = "https://github.com/cajias/plangen/issues"
"Changelog" = "https://github.com/cajias/plangen/releases"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
openai = "^1.12.0"
pydantic = "^2.6.1"
tenacity = "^8.2.3"
numpy = "^1.20.0"
langgraph = "^0.1.11"
boto3 = "^1.34.0"
jinja2 = "^3.1.2"
networkx = "^3.1"
matplotlib = "^3.7.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^24.1.1"
isort = "^5.12.0"
mypy = "^1.5.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.5"
pylint = "^3.0.0"
pip-audit = "^2.9.0"
agentic-guardrails = {git = "https://github.com/cajias/lint-configs.git", tag = "v1.0.0", subdirectory = "python"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ==============================================================================
# Linting and Code Quality Configuration
# Base configs from: agentic-guardrails package (lint_configs v1.0.0)
# Source: https://github.com/cajias/lint-configs
#
# The agentic-guardrails package provides canonical linting configurations.
# Due to tool limitations (most linters don't support extending from installed
# packages), we use the package config path directly in tool invocations:
#
# Usage:
#   CONFIG=$(poetry run python -c "from lint_configs import get_python_config_path; print(get_python_config_path())")
#   poetry run ruff check --config $CONFIG
#   poetry run mypy --config-file $CONFIG
#   poetry run pylint --rcfile $CONFIG
#   poetry run black --config $CONFIG
#   poetry run pytest -c $CONFIG
#
# Or add to pyproject.toml as needed for tools that require it.
# Project-specific overrides are defined below.
# ==============================================================================

# Project-specific MyPy overrides for third-party libraries
[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "networkx.*",
    "matplotlib.*",
]
ignore_missing_imports = true

# Project-specific Coverage source configuration
[tool.coverage.run]
source = ["plangen"]
