[tool.poetry]
name = "plangen"
version = "0.1.0"
description = "A multi-agent framework for generating planning and reasoning trajectories with LLMs"
authors = ["Carlos Cajias <cajias@example.com>"]
maintainers = ["PlanGEN Team <plangen@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/cajias/plangen"
documentation = "https://github.com/cajias/plangen/tree/main/docs"
homepage = "https://github.com/cajias/plangen"
keywords = ["llm", "planning", "agents", "multi-agent", "generative-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{include = "plangen"}]

# PyPI-specific fields
[tool.poetry.urls]
"Bug Tracker" = "https://github.com/cajias/plangen/issues"
"Changelog" = "https://github.com/cajias/plangen/releases"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
openai = "^1.12.0"
pydantic = "^2.6.1"
tenacity = "^8.2.3"
numpy = "^1.20.0"
langgraph = "^0.1.11"
boto3 = "^1.34.0"
jinja2 = "^3.1.2"
networkx = "^3.1"
matplotlib = "^3.7.0"
python-dotenv = "^1.0.0"
typing-extensions = "^4.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^24.1.1"
isort = "^5.12.0"
mypy = "^1.5.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.5"
pylint = "^3.0.0"
pip-audit = "^2.9.0"
agentic-guardrails = {git = "https://github.com/cajias/agentic-guardrails.git", tag = "v1.0.1", subdirectory = "python"}

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.0"
mkdocs-material = "^9.5.0"
mkdocs-minify-plugin = "^0.7.0"
pymdown-extensions = "^10.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ==============================================================================
# Linting and Code Quality Configuration
# Base configs from: agentic-guardrails package (v1.0.1)
# Source: https://github.com/cajias/agentic-guardrails
#
# The agentic-guardrails package provides canonical linting configurations.
# All base rules come from the package. This file contains ONLY project-specific
# overrides.
#
# To update base configs: poetry update agentic-guardrails
# ==============================================================================

# Ruff configuration - extends from agentic-guardrails package
[tool.ruff]
extend = ".venv/lib/python3.11/site-packages/lint_configs/ruff.toml"

# Project-specific overrides
[tool.ruff.lint.isort]
known-first-party = ["plangen"]

# Project-specific MyPy overrides for third-party libraries
[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "networkx.*",
    "matplotlib.*",
]
ignore_missing_imports = true

# Project-specific Coverage source configuration
[tool.coverage.run]
source = ["plangen"]
